--- a/.classpath
+++ b/.classpath
@@ -19,11 +19,13 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="resources/jpscs.jar"/>
 	<classpathentry kind="lib" path="resources/mssql-jdbc-6.2.2.jre8.jar"/>
-	<classpathentry kind="lib" path="resources/pvjdbc2.jar"/>
 	<classpathentry kind="lib" path="resources/sqljdbc4.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="resources/mysql-connector-java-8.0.13.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
